--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
 * {
 	margin: 0;
@@ -11,24 +11,30 @@
 }
 
 html {
-	font-family: 'Nunito Sans', sans-serif;
-	font-size: 12px;
+	font-family: 'Montserrat', sans-serif;
+	font-size: 14px;
 }
 
 body {
 	max-width: 800px;
 	margin: auto;
 	color: whitesmoke;
-	background-color: #050413;
+	background-color: #15091f;
 }
 
 header {
-	background-color: #110c3d;
+	background-color: #3d195b;
+}
+
+a {
+	all: unset;
+	cursor: pointer;
+
 }
 
 h1 {
 	padding: 1rem;
-
+	text-align: center;
 }
 
 nav {
@@ -42,7 +48,8 @@ nav {
 button {
 	all: unset;
 	padding: 0.5rem;
-	flex-shrink:  0;
+	flex-shrink: 0;
+	font-size: 0.75rem;
 }
 
 .logo {
@@ -51,9 +58,6 @@ button {
 }
 
 #fixtures {
-	background-color: #110c3d;
-	border-radius:  1rem;
-	margin:  1rem;
 	padding: 2rem 1rem;
 	display: flex;
 	flex-direction: column;
@@ -69,6 +73,7 @@ button {
 
 .no-fixtures {
 	font-size: 1rem;
+	animation: fadeIn 1s;
 }
 
 .fixture {
@@ -76,6 +81,12 @@ button {
 	align-items: center;
 	justify-content: center;
 	gap: 0.5rem;
+	animation: fadeIn 1s;
+}
+
+@keyframes fadeIn {
+	0% { opacity: 0; }
+	100% { opacity: 1; }
 }
 
 .home {
@@ -87,4 +98,10 @@ button {
 .away {
 	flex-basis: 100%;
 	flex-shrink: 0;
+}
+
+.score,
+.time {
+	font-weight: bold;
+	white-space: nowrap;
 }
