--- a/css/index.css
+++ b/css/index.css
@@ -35,14 +35,16 @@ a {
 h1 {
 	padding: 1rem;
 	text-align: center;
+	filter: drop-shadow(0 0 0.75rem rgba(0,0,0,0.5));
 }
 
-nav {
+#date-buttons {
 	display: flex;
 	flex-wrap: nowrap;
 	overflow-x: scroll;
 	gap: 1rem;
 	cursor: pointer;
+	animation: fadeIn 1s;
 }
 
 button {
@@ -100,8 +102,10 @@ button {
 	flex-shrink: 0;
 }
 
-.score,
-.time {
+.status {
+	text-align: center;
+	flex-basis: 3rem;
+	flex-shrink: 0;
 	font-weight: bold;
 	white-space: nowrap;
 }
